--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
            <div id="LoginModal" class="reveal-modal" data-reveal>
              <form>
               <div class="row">
-
+                <div class="large-8 columns">
+                 <label>First Name
+                 <input type="text" placeholder="large-12.columns" />
+                 </label>
+                </div>
               </div>
              </form>
              <a class="close-reveal-modal">&#215;</a>
