--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
            <div id="LoginModal" class="reveal-modal" data-reveal>
              <form>
               <div class="row">
-                <div class="large-8 columns">
-                 <label>First Name
-                 <input type="text" placeholder="large-12.columns" />
-                 </label>
+                <div class="large-4 columns">
+                 <input type="text" placeholder="First Name" />
+                </div>
+                <div class="large-4 columns">
+                 <input type="text" placeholder="Last Name" />
                 </div>
               </div>
              </form>
