--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="large-4 columns">
                  <input type="text" placeholder="First Name" />
                 </div>
-                <div class="large-4 columns">
+                <div class="large-4 columns end">
                  <input type="text" placeholder="Last Name" />
                 </div>
               </div>
