--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
                  <input type="text" placeholder="Last Name" />
                 </div>
               </div>
+              <div class="row">
+                <div class="large-4 columns">
+                 <input type="text" placeholder="Email" />
+                </div>
+                <div class="large-4 columns">
+                 <input type="text" placeholder="Desired Username" />
+                </div>
+                <div class="large-4 columns">
+                 <input type="text" placeholder="Password" />
+                </div>
+              </div>
              </form>
              <a class="close-reveal-modal">&#215;</a>
            </div>
