--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
            <div id="LoginModal" class="reveal-modal" data-reveal>
              <form>
               <div class="row">
+                <h2>Create An Account</h2>
                 <div class="large-4 columns">
                  <input type="text" placeholder="First Name" />
                 </div>
@@ -36,6 +37,16 @@
                  <input type="text" placeholder="Desired Username" />
                 </div>
                 <div class="large-4 columns">
+                 <input type="text" placeholder="Password" />
+                </div>
+              </div>
+              </br>
+              <div class="row">
+                <h2>Log In</h2>
+                <div class="large-4 columns">
+                 <input type="text" placeholder="Username" />
+                </div>
+                <div class="large-4 columns end">
                  <input type="text" placeholder="Password" />
                 </div>
               </div>
