--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
                 <div class="large-4 columns">
                  <input type="text" placeholder="Desired Username" />
                 </div>
-                <div class="large-4 columns end">
+                <div class="large-4 columns">
                  <input type="text" placeholder="Password" />
+                </div>
+                <div class="large-4 columns">    
+                  <a href="http://edgardoa.github.io/EventApp/index" class="small radius button">Submit</a>
                 </div>
               </div>
               </br>
@@ -46,8 +49,11 @@
                 <div class="large-4 columns">
                  <input type="text" placeholder="Username" />
                 </div>
-                <div class="large-4 columns end">
+                <div class="large-4 columns">
                  <input type="text" placeholder="Password" />
+                </div>
+                <div class="large-4 columns">    
+                  <a href="http://edgardoa.github.io/EventApp/index" class="small radius button">Log In</a>
                 </div>
               </div>
              </form>
