--- a/create.html
+++ b/create.html
@@ -19,20 +19,53 @@
   </a>
   <div class="nav-menu">
     <ul class="nav-buttons">
-      <li class="home-button"><a href="http://edgardoa.github.io/EventApp/">Home</a></li>
-      <li class="create-button"><a href=#>Create</a></li>
+      <li class="home-button"><a href=#>Home</a></li>
+      <li class="create-button"><a href="http://edgardoa.github.io/EventApp/create">Create</a></li>
       <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
-       <div id="LoginModal" class="reveal-modal" data-reveal>
-         <form>
-          <div class="row">
-
-          </div>
-        </form>
-        <a class="close-reveal-modal">&#215;</a>
+        <div id="LoginModal" class="reveal-modal" data-reveal>
+          <form>
+            <div class="row">
+              <h2>Create An Account</h2>
+              <div class="large-4 columns">
+               <input type="text" placeholder="First Name" />
+              </div>
+              <div class="large-4 columns">
+               <input type="text" placeholder="Last Name" />
+              </div>
+              <div class="large-4 columns">
+               <input type="text" placeholder="Email" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="large-4 columns">
+                <input type="text" placeholder="Desired Username" />
+              </div>
+              <div class="large-4 columns">
+                <input type="text" placeholder="Password" />
+              </div>
+              <div class="large-4 columns">    
+                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Submit</a>
+              </div>
+            </div>
+            </br>
+            <div class="row">
+              <h2>Log In</h2>
+              <div class="large-4 columns">
+                <input type="text" placeholder="Username" />
+              </div>
+              <div class="large-4 columns">
+                <input type="text" placeholder="Password" />
+              </div>
+              <div class="large-4 columns">    
+                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Log In</a>
+              </div>
+            </div>
+          </form>
+          <a class="close-reveal-modal">&#215;</a>
       </div>
-    </li>
-  </ul>
-</div>
+      </li>
+    </ul>
+  </div>
 </div>
 
 <div class="row">
