getting links hooked up

--- a/create.html
+++ b/create.html
@@ -19,8 +19,8 @@
   </a>
   <div class="nav-menu">
     <ul class="nav-buttons">
-      <li class="home-button"><a href=#>Home</a></li>
-      <li class="create-button"><a href="http://edgardoa.github.io/EventApp/create">Create</a></li>
+      <li class="home-button"><a href="http://edgardoa.github.io/EventApp/index">Home</a></li>
+      <li class="create-button"><a href=#>Create</a></li>
       <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
         <div id="LoginModal" class="reveal-modal" data-reveal>
           <form>
