--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 <input type="text" placeholder="Password" />
               </div>
               <div class="large-4 columns">    
-                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Submit</a>
+                <a href=# class="small radius button" id="logIn">Submit</a>
               </div>
             </div>
             </br>
@@ -53,7 +53,7 @@
                 <input type="text" placeholder="Password" />
               </div>
               <div class="large-4 columns">    
-                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Log In</a>
+                <a href=# class="small radius button" id="logIn">Log In</a>
               </div>
             </div>
           </form>
