--- a/view.html
+++ b/view.html
@@ -79,6 +79,7 @@
 			<div class="large-12 columns">
 				<label>Event Name</label>
 				<input type="text" placeholder="Enter Event Name Here..." />
+				<p>Shara's Birthday Party!!</p>
 			</div>
 		</div>
 	
