--- a/view.html
+++ b/view.html
@@ -77,23 +77,21 @@
 		<!-- Data Entry -->	
 		<div class="row">
 			<div class="large-12 columns">
-				<label>Event Name</label>
-				<input type="text" placeholder="Enter Event Name Here..." />
-				<p>Shara's Birthday Party!!</p>
+				<p>Shara's Birthday Party!</p>
 			</div>
 		</div>
 	
 		<div class="row">
 			<div class="large-12 columns">
 				<label>Event Date</label>
-				<input type="date">
+				<p>12/15/14</p>
 			</div>
 		</div>
 		
 		<div class="row">
 			<div class="large-12 columns">
 				<label>Event Location</label>
-				<input type="text" placeholder="Enter Event Address Here..." />
+				<p>172 Holleman Dr. </p>
 			</div>
 		</div>
 		
