--- a/view.html
+++ b/view.html
@@ -67,8 +67,8 @@
     <div class="row">
       <div class="large-12 columns">
       	<div class="panel">
-	        <h2>View Event</h2>
-	        <p>View the event you were invited to</p>
+	        <h2>Event Name</h2>
+	        
       	</div>
       </div>
     </div>
@@ -77,6 +77,7 @@
 		<!-- Data Entry -->	
 		<div class="row">
 			<div class="large-12 columns">
+			<
 				<p>Shara's Birthday Party!</p>
 			</div>
 		</div>
@@ -107,11 +108,12 @@
 		<!-- Donation Radio Button & Slider -->	
 		<div class="row">
 			<div class="large-6 medium-6 columns">
-				<label>This event accepts donations</label>
+				<label>RSVP</label>
 				<input type="radio" name="donation" value="Yes" id="donationYes"><label for="donationYes">Yes</label>
 				<input type="radio" name="donation" value="No" id="donationYes"><label for="donationNo">No</label>
 			</div>
 			
+			<h3>Feel free to donate</h3>
 			
 			<div class="row">
   				<div class="small-8 medium-9 columns">
@@ -124,7 +126,7 @@
     				<span id="sliderOutput3"></span>
   				</div>
   				<div class="small-2 columns">
-					<a href="http://edgardoa.github.io/EventApp/payment.html" class="button prefix">Go To Payment</a>
+					<a href="http://edgardoa.github.io/EventApp/payment.html" class="button prefix">Donate</a>
 				</div>
 			</div>
 
