--- a/view.html
+++ b/view.html
@@ -113,7 +113,11 @@
 				<input type="radio" name="donation" value="No" id="donationYes"><label for="donationNo">No</label>
 			</div>
 			
-			<h3>Feel free to donate</h3>
+			<div class="row">
+				<div class="large-12 columns">
+					<h1>Feel free to donate</h1>
+				</div>
+			</div>
 			
 			<div class="row">
   				<div class="small-8 medium-9 columns">
