--- a/view.html
+++ b/view.html
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="large-12 columns">
       	<div class="panel">
-	        <h2>Event Name</h2>
+	        <h2>Sarah's Birthday Party!!</h2>
 	        
       	</div>
       </div>
@@ -75,12 +75,6 @@
     
 	<form>
 		<!-- Data Entry -->	
-		<div class="row">
-			<div class="large-12 columns">
-			<
-				<p>Shara's Birthday Party!</p>
-			</div>
-		</div>
 	
 		<div class="row">
 			<div class="large-12 columns">
@@ -95,8 +89,9 @@
 				<p>172 Holleman Dr. </p>
 			</div>
 		</div>
+		
 	<script>
-	     var myCenter = new google.maps.LatLng(51.508742, -0.120850);
+	   var myCenter = new google.maps.LatLng(51.508742, -0.120850);
 
       function initialize()
       {
@@ -118,69 +113,6 @@
     var marker = new google.maps.Marker({position:myCenter,icon:'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png'});
     marker.setMap(map);
 
-    //Marker-Icon Image
-    var infowindow = new google.maps.InfoWindow({content:"We can put info of the event here as well!"});
-    infowindow.open(map,marker);
-
-    //Info Window that opens when clicking on marker
-    //var infowindowClick = new google.maps.InfoWindow({content:"Or we can do it by cliking on marker"});
-    var infowindowClick = new google.maps.InfoWindow({content:"Or we can do it by cliking on marker"}); // background-color = #B2D1FF, max-width = 80, max-height = 120}
-
-    //Open on click
-    google.maps.event.addListener(marker, 'click', function() {infowindowClick.open(map,marker);});
-
-    //Search Box
-    var markers = [];
-    var input =(document.getElementById('pac-input'));
-
-    var searchBox = new google.maps.places.SearchBox((input));
-
-    google.maps.event.addListener(searchBox, 'places_changed', function() {
-      var places = searchBox.getPlaces();
-
-      if (places.length == 0) {
-        return;
-      }
-      for (var i = 0, marker; marker = markers[i]; i++) {
-        marker.setMap(null);
-      }
-
-        // For each place, get the icon, place name, and location.
-        markers = [];
-        var bounds = new google.maps.LatLngBounds();
-        for (var i = 0, place; place = places[i]; i++) {
-          var image = {
-            url: place.icon,
-            size: new google.maps.Size(24, 24),
-            origin: new google.maps.Point(20, 20),
-            anchor: new google.maps.Point(17, 34),
-            scaledSize: new google.maps.Size(25, 25)
-          };
-
-          // Create a marker for each place.
-          var marker = new google.maps.Marker({
-            map: map,
-            icon: 'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png',  // image
-            title: place.name,
-            position: place.geometry.location
-          });
-
-          markers.push(marker);
-          bounds.extend(place.geometry.location);
-          zoom: 9;
-        }
-
-        map.fitBounds(bounds);
-      });
-
-      // Bias the SearchBox results towards places that are within the bounds of the
-      // current map's viewport.
-      google.maps.event.addListener(map, 'bounds_changed', function() {
-        var bounds = map.getBounds();
-        searchBox.setBounds(bounds);
-      });
-
-    }
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
