--- a/view.html
+++ b/view.html
@@ -67,14 +67,12 @@
     <div class="row">
       <div class="large-12 columns">
       	<div class="panel">
-	        <h2>Sarah's Birthday Party!!</h2>
-	        
+	        <h2>Sarah's Birthday Party!/h2>	        
       	</div>
       </div>
     </div>
     
 	<form>
-		<!-- Data Entry -->	
 	
 		<div class="row">
 			<div class="large-12 columns">
@@ -91,7 +89,7 @@
 		</div>
 		
 	<script>
-	   var myCenter = new google.maps.LatLng(51.508742, -0.120850);
+	     var myCenter = new google.maps.LatLng(51.508742, -0.120850);
 
       function initialize()
       {
@@ -113,6 +111,8 @@
     var marker = new google.maps.Marker({position:myCenter,icon:'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png'});
     marker.setMap(map);
 
+
+    }
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
