--- a/view.html
+++ b/view.html
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="large-12 columns">
       	<div class="panel">
-	        <h2>Sarah's Birthday Party!/h2>	        
+	        <h2>Sarah's Birthday Party!</h2>	        
       	</div>
       </div>
     </div>
