--- a/view.html
+++ b/view.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCalcFfRpko_8mDNW9HRanSJe7tUslY94c&sensor=false">
+  </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EventUs</title>
