--- a/view.html
+++ b/view.html
@@ -119,7 +119,7 @@
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 			</head>
-				<div id="googleMap" style="width:50%;height:500px; position: relative; left: 180px;"></div>
+				<div id="googleMap" style="width:73%; height:300px; position: relative; left: 25%;"></div>
 			</div>
 		</div>
 				  
