--- a/view.html
+++ b/view.html
@@ -133,7 +133,7 @@
 			
 			<div class="row">
 				<div class="large-12 columns">
-					<p>Feel free to donate</p>
+					<p>Feel free to donate:</p>
 				</div>
 			</div>
 			
@@ -145,7 +145,7 @@
     			</div>
   				</div>
   				<div class="small-2 medium-1 columns">
-    				<span id="sliderOutput3"></span>
+    				$<span id="sliderOutput3"></span>
   				</div>
   				<div class="small-2 columns">
 					<a href="http://edgardoa.github.io/EventApp/payment.html" class="button prefix">Donate</a>
