--- a/view.html
+++ b/view.html
@@ -147,8 +147,11 @@
   				<div class="small-2 medium-1 columns">
     				$<span id="sliderOutput3"></span>
   				</div>
-  				<div class="small-2 columns">
-					<a href="http://edgardoa.github.io/EventApp/payment.html" class="button prefix">Donate</a>
+			</div>
+			
+			<div class="row">
+			  	<div class="small-2 columns">
+					<a href="http://edgardoa.github.io/EventApp/payment.html" class="small radius button">Donate</a>
 				</div>
 			</div>
 
