--- a/view.html
+++ b/view.html
@@ -148,7 +148,8 @@
     				$<span id="sliderOutput3"></span>
   				</div>
 			</div>
-			
+							  
+		<!-- Button -->
 			<div class="row">
 			  	<div class="small-2 columns">
 					<a href="http://edgardoa.github.io/EventApp/payment.html" class="small radius button">Donate</a>
@@ -156,19 +157,8 @@
 			</div>
 
 		</div>
-				  
-		<!-- Buttons -->	  
-		<div class="row">
-			
-			<ul class="small-block-grid-3">
-  				<li><a href="#" class="medium alert button">Cancel</a></li>
-  				<li><a href="#" class="small button">Add Photo</a></li>
-  				<li><a href="#" class="medium success button">Accept Changes</a></li>
-			</ul>
-			
-			
-			
-		</div>
+	  
+		
 
 		</form>
 
