--- a/view.html
+++ b/view.html
@@ -100,8 +100,8 @@
         var Payment_Amount = 100;
         var mapProp = {
           center:myCenter,
-          zoom:9,
-          mapTypeId:google.maps.MapTypeId.ROADMAP
+          zoom:7,
+          mapTypeId:google.maps.MapTypeId.HYBRID
 
       //mapTypeId:google.maps.MapTypeId.HYBRID
       //mapTypeId:google.maps.MapTypeId.SATELLITE
