--- a/view.html
+++ b/view.html
@@ -112,6 +112,7 @@
     var marker = new google.maps.Marker({position:myCenter,icon:'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png'});
     marker.setMap(map);
 
+	map.setZoom(15);
 
     }
     google.maps.event.addDomListener(window, 'load', initialize);
