--- a/view.html
+++ b/view.html
@@ -98,7 +98,7 @@
         var mapProp = {
           center:myCenter,
           zoom:16,
-          mapTypeId:google.maps.MapTypeId.HYBRID
+          mapTypeId:google.maps.MapTypeId.TERRAIN
 
       //mapTypeId:google.maps.MapTypeId.HYBRID
       //mapTypeId:google.maps.MapTypeId.SATELLITE
@@ -111,7 +111,7 @@
     var marker = new google.maps.Marker({position:myCenter,icon:'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png'});
     marker.setMap(map);
 
-	map.setZoom(18);
+	map.setZoom(15);
 
     }
     google.maps.event.addDomListener(window, 'load', initialize);
