--- a/create.html
+++ b/create.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCalcFfRpko_8mDNW9HRanSJe7tUslY94c&sensor=false">
-  </script>
+
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
 
   <meta charset="utf-8" />
@@ -107,6 +106,12 @@
         <label>Event Location</label>
         <input id ="pac-input"; type="text"; />
       </div>
+	  
+	<div class="row">
+      <div class="large-8 large-centered columns">
+        <label>Event Description</label>
+		<input type="text"; style=" height: 50px"; placeholder="Enter Event Description Here..." />
+      </div>
 
       <script>
       var myCenter = new google.maps.LatLng(51.508742, -0.120850);
@@ -197,7 +202,7 @@
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
-  <div id="googleMap" style="width:50%;height:500px; position: relative; left: 180px;"></div>
+  <div id="googleMap" style="width:50%;height:500px; position: relative; left: 10%;"></div>
 </div>
 </form>
 
