--- a/view.html
+++ b/view.html
@@ -79,7 +79,8 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<label>Event Date</label>
-				<p>12/15/14</p>
+				<p>12/15/14                          It's party time! Join me to celebrate my birthday by partying like there is no tomorrow</p>
+			    <p>                                  Feel free to bring food or drinks! </p>
 			</div>
 		</div>
 		
