--- a/view.html
+++ b/view.html
@@ -78,15 +78,15 @@
 	
 		<div class="row">
 			<div class="large-12 columns">
-				<label>Event Date</label>
-				<p>12/15/14                          It's party time! Join me to celebrate my birthday by partying like there is no tomorrow</p>
-			    <p>                                  Feel free to bring food or drinks! </p>
+				<label><b>Event Date</b></label>
+				<pre>12/15/14                          It's party time! Join me to celebrate my birthday by partying like there is no tomorrow</pre>
+			    <pre>                                  Feel free to bring food or drinks! </pre>
 			</div>
 		</div>
 		
 		<div class="row">
 			<div class="large-12 columns">
-				<label>Event Location</label>
+				<label><b>Event Location</b></label>
 				<p>1864 Holleman Dr. </p>
 			</div>
 		
