--- a/view.html
+++ b/view.html
@@ -79,7 +79,7 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<label><b>Event Date</b></label>
-				<pre>12/15/14                          It's party time! Join me to celebrate my birthday by partying like there is no tomorrow</pre>
+				<p>12/15/14</p>pre>                    It's party time! Join me to celebrate my birthday by partying like there is no tomorrow</pre>
 			    <pre>                                  Feel free to bring food or drinks! </pre>
 			</div>
 		</div>
@@ -132,7 +132,7 @@
 			
 			<div class="row">
 				<div class="large-12 columns">
-					<p>Feel free to donate:</p>
+					<p><b>Feel free to donate:</b></p>
 				</div>
 			</div>
 			
