--- a/view.html
+++ b/view.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="en">
   <head>
 
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/directions/json?parameters"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -87,15 +88,25 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<label><b>Event Location</b></label>
-				<p>1864 Holleman Dr. </p>
+				<p>1864 Holleman Dr. </p>		
+			</div>
+			
+			<div class="large-4 medium-3 columns">
+				<input id="address-input"; type="search" placeholder="Enter your location here ..." onsearch="calcRoute()">
 			</div>
 		
 		
 	<script>
 	     var myCenter = new google.maps.LatLng(30.592175, -96.338701);
+		 var directionsDisplay;
+		 var directionsService = new google.maps.DirectionsService();
+		 var map;
 
       function initialize()
       {
+	  
+		directionsDisplay = new google.maps.DirectionsRenderer();
+	  
         var mapProp = {
           center:myCenter,
           zoom: 19,
@@ -106,8 +117,26 @@
       //mapTypeId:google.maps.MapTypeId.HYBRID
       //mapTypeId:google.maps.MapTypeId.TERRAIN
     };
-    var map= new google.maps.Map(document.getElementById("googleMap"),mapProp);
+		map= new google.maps.Map(document.getElementById("googleMap"),mapProp);
+		directionsDisplay.setMap(map);
 
+	function calcRoute() {
+
+		var start = document.getElementById('address-input').value;
+		var end = myCenter;
+		var request = {
+				origin: start,
+				destination: end,
+				travelMode: google.maps.TravelMode.DRIVING
+				};
+		directionsService.route(request, function(response, status) {
+			if ( status == google.maps.DirectionsStatus.OK) {
+				diretionsDisplay.setDirections(response);
+				}
+			});
+	}	
+	
+		
     //Icon Image
     var marker = new google.maps.Marker({position:myCenter,icon:'https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/House-48.png'});
     marker.setMap(map);
