--- a/view.html
+++ b/view.html
@@ -136,7 +136,7 @@
 		//var end = myCenter;
 		var request = {
 				//origin: start,
-				origin: searchBox,
+				origin: input,
 				destination: myCenter,
 				travelMode: google.maps.TravelMode.DRIVING
 				};
