--- a/create.html
+++ b/create.html
@@ -104,7 +104,7 @@
 	<div class="row">
       <div class="large-8 large-centered columns">
         <label>Event Description</label>
-		<input type="text"; style=" height: 50px"; placeholder="Enter Event Description Here..." />
+		<input type="text" style=" height: 50px"; placeholder="Enter Event Description Here..." />
      </div>
 
     <div class="row">
