--- a/view.html
+++ b/view.html
@@ -93,7 +93,7 @@
 			
 			<div class="large-4 medium-3 columns">
 				<label><b>Directions</b></label>
-				<input id="address-input"; type="text" placeholder="Enter your location here ..." autocomplete="off">
+				<input id="address-input" type="text" placeholder="Enter your location here ..." autocomplete="off">
 			</div>
 		
 		
@@ -143,7 +143,7 @@
 				};
 		directionsService.route(request, function(response, status) {
 			if ( status == google.maps.DirectionsStatus.OK) {
-				diretionsDisplay.setDirections(response);
+				directionsDisplay.setDirections(response);
 				}
 			});
 	}	
