--- a/view.html
+++ b/view.html
@@ -2,8 +2,8 @@
 <html class="no-js" lang="en">
   <head>
 
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/directions/json?parameters"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+  
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EventUs</title>
