--- a/view.html
+++ b/view.html
@@ -3,7 +3,8 @@
   <head>
 
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-  
+
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places&sensor=false"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EventUs</title>
