--- a/view.html
+++ b/view.html
@@ -157,7 +157,6 @@
 		map.setZoom(19);
 
     }
-    google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 			</head>
 				<div id="googleMap" style="width:73%; height:300px; position: relative; left: 25%;"></div>
@@ -167,7 +166,7 @@
 		<!-- Donation Radio Button & Slider -->	
 		<div class="row">
 			<div class="large-6 medium-6 columns">
-				<label>RSVP</label>
+				<label><b>RSVP</b></label>
 				<input type="radio" name="donation" value="Yes" id="donationYes"><label for="donationYes">Yes</label>
 				<input type="radio" name="donation" value="No" id="donationYes"><label for="donationNo">No</label>
 			</div>
@@ -210,6 +209,7 @@
     <script src="js/foundation/foundation.slider.js"></script>
     <script>
       $(document).foundation();
+	  google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </body>
 </html>
