--- a/create.html
+++ b/create.html
@@ -106,13 +106,14 @@
         <label>Event Description</label>
 		<input type="text" style=" height: 50px"; placeholder="Enter Event Description Here..." />
      </div>
-
+	</div>
+	
     <div class="row">
       <div class="large-8 large-centered columns">
         <label>Event Location</label>
-        <input id ="pac-input"; type="text"; />
+		<input id ="pac-input"; type="text" style=" height: 50px"; placeholder="Enter Event Description Here..." />
       </div>
-
+	</div>
   <script>
       var myCenter = new google.maps.LatLng(51.508742, -0.120850);
 
