--- a/create.html
+++ b/create.html
@@ -111,7 +111,7 @@
     <div class="row">
       <div class="large-8 large-centered columns">
         <label>Event Location</label>
-		<input id ="pac-input"; type="text" style=" height: 50px"; placeholder="Enter Event Description Here..." />
+		<input id ="pac-input" type="text" style=" height: 50px"; placeholder="Enter Event Description Here..." />
       </div>
 	</div>
   <script>
