--- a/create.html
+++ b/create.html
@@ -104,14 +104,14 @@
 	<div class="row">
       <div class="large-8 large-centered columns">
         <label>Event Description</label>
-		<input type="text" style=" height: 50px"; placeholder="Enter Event Description Here..." />
+		<input type="text" ; placeholder="Enter Event Description Here..." />
      </div>
 	</div>
 	
     <div class="row">
       <div class="large-8 large-centered columns">
         <label>Event Location</label>
-		<input id ="pac-input" type="text" style=" height: 50px"; placeholder="Enter Event Description Here..." />
+		<input id ="pac-input" type="text" ; placeholder="Enter Event Description Here..." />
       </div>
 	</div>
   <script>
