--- a/create.html
+++ b/create.html
@@ -194,7 +194,17 @@
   </head>
   <div id="googleMap" style="width:50%;height:500px; position: relative; left: 25%;"></div>
 </div>
+
+	<div class="row">
+		<div class="large-8 large-centered columns">
+			<label>Type of Event</label>
+			<input type="radio" name="privacy" value="Private (Event will be visble only to people you invite)" id="Private"><label for="Private">Private</label>
+			<input type="radio" name="privacy" value="Public (Event will be visble to all members of EventUs)" id="Public"><label for="Public">Public</label>
+		</div>
+	</div>
+
 </form>
+
 
 <!-- Donation Radio Button -->	
 <div class="row">
