--- a/create.html
+++ b/create.html
@@ -207,11 +207,19 @@
 
 <!-- Donation Radio Button -->	
 <div class="row">
- <div class="large-6 large-centered medium-6 medium-centered columns">
+ <div class="large-8 large-centered columns">
   <label>Accept Donations</label>
   <input type="radio" name="donation" value="Yes" id="donationYes"><label for="donationYes">Yes</label>
   <input type="radio" name="donation" value="No" id="donationYes"><label for="donationNo">No</label>
 </div>
+</div>
+
+<!-- Guest List -->
+<div class="row">
+	<div class="large-8 large-centered columns">
+		<label>Guest list </label>
+		<input id="checkbox1" type="checkbox"><label for="checkbox1">Hide the Guest list</label>
+	</div>
 </div>
 
 <!-- Buttons -->	  
