--- a/create.html
+++ b/create.html
@@ -224,8 +224,9 @@
 
 <!-- Buttons -->	  
 <div class="row">
-
- <ul class="small-block-grid-6">
+ <div class="small-block-grid-4">
+ 		<li><a href="signin.html" class="small alert button">Cancel</a></li>
+		<li><a href="user.html" class="small success button">Create</a></li>
   <li><button href="#" class="small button" data-reveal-id="inviteModal">Invite</button>
     <div id="inviteModal" class="reveal-modal" data-reveal>
      <h2>Login to invite your friends!</h2>
@@ -364,6 +365,13 @@
 <a class="close-reveal-modal">&#215;</a>
 </div>
 </li>
+</div>
+</div>
+
+<div class="row">
+	<div class="small-block-grid-3">
+		<li><input type="reset" class="small button" value="Clear" /></li>
+		<li><a href="#" class="small button">Add Photo</a></li>
 <li><button class="small button" data-reveal-id="myModal">Promote</button>
  <div id="myModal" class="reveal-modal" data-reveal>
    <h2>Create Promotional Tweet</h2>
@@ -373,19 +381,18 @@
 
 </li>
 
-<li><input type="reset" class="small button" value="Clear" /></li>
-
-<li><a href="#" class="small button">Add Photo</a></li>
-
-<li><a href="signin.html" class="medium alert button">Cancel</a></li>
-
-<li><a href="user.html" class="medium success button">Create</a></li>
 </ul>	
+	
+</div>
 </div>
 
+
  <div class="footer">
-  <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
+	<class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
 </div>    
+
+
+
 
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
