--- a/create.html
+++ b/create.html
@@ -224,10 +224,11 @@
 
 <!-- Buttons -->	  
 <div class="row">
- <div class="small-block-grid-4">
- 		<li><a href="signin.html" class="small alert button">Cancel</a></li>
-		<li><a href="user.html" class="small success button">Create</a></li>
-  <li><button href="#" class="small button" data-reveal-id="inviteModal">Invite</button>
+	 <div class="small-block-grid-3">
+		<ul class="button-group even-3">
+	 		<li><a href="signin.html" class="small alert button">Cancel</a></li>
+			<li><a href="user.html" class="small success button">Create</a></li>
+			<li><button href="#" class="small button" data-reveal-id="inviteModal">Invite</button>
     <div id="inviteModal" class="reveal-modal" data-reveal>
      <h2>Login to invite your friends!</h2>
      <div class="row">
@@ -365,8 +366,10 @@
 <a class="close-reveal-modal">&#215;</a>
 </div>
 </li>
+		</ul>
 </div>
 </div>
+
 
 <div class="row">
 	<div class="small-block-grid-3">
