--- a/create.html
+++ b/create.html
@@ -224,8 +224,8 @@
 
 <!-- Buttons -->	  
 <div class="row">
-	 <div class="small-block-grid-3">
-		<ul class="button-group-centered">
+	 <div class="small-block-grid-3 small-centered">
+		<ul class="button-group">
 	 		<li><a href="signin.html" class="small alert button">Cancel</a></li>
 			<li><a href="user.html" class="small success button">Create</a></li>
 			<li><button href="#" class="small button" data-reveal-id="inviteModal">Invite</button>
