--- a/create.html
+++ b/create.html
@@ -224,7 +224,7 @@
 
 <!-- Buttons -->	  
 <div class="row">
-	 <div class="small-block-grid-3 small-centered">
+	 <div class="small-block-grid-3 small-centered columns">
 		<ul class="button-group">
 	 		<li><a href="signin.html" class="small alert button">Cancel</a></li>
 			<li><a href="user.html" class="small success button">Create</a></li>
