--- a/create.html
+++ b/create.html
@@ -192,7 +192,7 @@
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
-  <div id="googleMap" style="width:50%;height:500px; position: relative; left: 25%;"></div>
+  <div id="googleMap" style="width:50%;height:500px; position: relativ e; left: 25%;"></div>
 
 	<div class="row">
 		<div class="large-8 large-centered columns">
@@ -372,7 +372,7 @@
 
 
 <div class="row">
-	<div class="small-block-grid-3">
+	<div class="small-block-grid-3" style="width:50%;height:500px; position: relativ e; left: 25%;">
 		<li><input type="reset" class="small button" value="Clear" /></li>
 		<li><a href="#" class="small button">Add Photo</a></li>
 <li><button class="small button" data-reveal-id="myModal">Promote</button>
