--- a/create.html
+++ b/create.html
@@ -372,7 +372,7 @@
 
 
 <div class="row">
-	<div class="small-block-grid-3" style="width:50%;height:500px; position: relativ e; left: 25%;">
+	<div class="small-8 small-centered columns">
 		<li><input type="reset" class="small button" value="Clear" /></li>
 		<li><a href="#" class="small button">Add Photo</a></li>
 <li><button class="small button" data-reveal-id="myModal">Promote</button>
