--- a/create.html
+++ b/create.html
@@ -89,17 +89,18 @@
    <div class="large-8 large-centered columns">
     <label>Event Date</label>
     <input type="date">
-
-    <div class="large-7 columns time">
+	</div>
+</div>
+	<div class="row">
+    <div class="large-6 columns time">
       <label>Event Start Time
         <input type="time" /></label>
       </div>
-      <div class="large-7 columns time">
+      <div class="large-6 columns time">
         <label>Event End Time
           <input type="time" /></label>
         </div>
       </div>				
-    </div>
 	
 	<div class="row">
       <div class="large-8 large-centered columns">
