--- a/create.html
+++ b/create.html
@@ -89,18 +89,17 @@
    <div class="large-8 large-centered columns">
     <label>Event Date</label>
     <input type="date">
-	</div>
-</div>
-	<div class="row">
-    <div class="large-4 large-centered columns time">
+
+    <div class="large-6 columns time">
       <label>Event Start Time
         <input type="time" /></label>
       </div>
-      <div class="large-4 large-centered columns time">
+      <div class="large-6 columns time">
         <label>Event End Time
           <input type="time" /></label>
         </div>
       </div>				
+    </div>
 	
 	<div class="row">
       <div class="large-8 large-centered columns">
