--- a/create.html
+++ b/create.html
@@ -89,7 +89,10 @@
    <div class="large-8 large-centered columns">
     <label>Event Date</label>
     <input type="date">
+	</div>
+	</div>
 
+	<div class="row">
     <div class="large-6 columns time">
       <label>Event Start Time
         <input type="time" /></label>
@@ -99,7 +102,6 @@
           <input type="time" /></label>
         </div>
       </div>				
-    </div>
 	
 	<div class="row">
       <div class="large-8 large-centered columns">
