--- a/create.html
+++ b/create.html
@@ -93,7 +93,7 @@
 </div>
 
 <div class="row">
-    <div class="large-3 columns time">
+    <div class="large-3 large-centered columns time">
       <label>Event Start Time
         <input type="time" /></label>
       </div>
