--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
 </div>
 </div>  
 
-<a href="http://foundation.zurb.com/docs/" class="small button">Foundation Documentation</a>    
 
 <div class="footer">
- <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
+ <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About Us</a>
 </div>      
 
 <script src="js/vendor/jquery.js"></script>
