--- a/view.html
+++ b/view.html
@@ -100,14 +100,7 @@
 				<p>1864 Holleman Dr. </p>		
 			</div>
 		</div>
-		
-		<div class="row">
-			<div class="large-4 medium-3 columns">
-				<label><b>Directions</b></label>
-				<input id="address-input" type="text" placeholder="Enter your location here ..." autocomplete="off">
-			</div>
-		</div>
-		
+
 		<!-- Google Map Script -->	
 		<script>
 	     var myCenter = new google.maps.LatLng(30.592175, -96.338701);
@@ -206,14 +199,20 @@
 		</div>
 							  
 		<!-- Donation Button -->
-			<div class="row">
-			  	<div class="small-2 columns">
-					<a href="http://edgardoa.github.io/EventApp/payment.html" class="small radius button">Donate</a>
-				</div>
+		<div class="row">
+			<div class="small-2 columns">
+				<a href="http://edgardoa.github.io/EventApp/payment.html" class="small radius button">Donate</a>
 			</div>
-
 		</div>
-	  
+		
+		<!-- Other Buttons -->
+		<div class="row">
+			<div class="small-6 columns">
+				<a href="view.html" class="medium success button">Save</a>
+				<a href="view.html" class="medium alert button">Cancel</a>
+			</div>
+		</div>
+		
 		</form>
 
     <script src="js/vendor/jquery.js"></script>
