button clean up

--- a/view.html
+++ b/view.html
@@ -206,8 +206,8 @@
 		<!-- Other Buttons -->
 		<div class="row">
 			<div class="small-6 columns">
-				<a href="view.html" class="medium success button">Save</a>
-				<a href="view.html" class="medium alert button">Cancel</a>
+				<a href="user.html" class="medium success button">Save</a>
+				<a href="user.html" class="medium alert button">Cancel</a>
 			</div>
 		</div>
 		
