button clean up

--- a/create.html
+++ b/create.html
@@ -226,7 +226,7 @@
 	<div class="row">
 		 <div class="small-block-grid-7 small-centered columns">
 			<ul class="button-group">
-				<li><a href="signin.html" class="small alert button">Cancel</a></li>
+				<li><a href="user.html" class="small alert button">Cancel</a></li>
 				<li><a href="user.html" class="small success button">Create</a></li>
 				<li><button href="#" class="small button" data-reveal-id="inviteModal">Invite</button>
 		<div id="inviteModal" class="reveal-modal" data-reveal>
