--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
        <h4 class="info-header">Set Ticket Prices</h4>
        <p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
      </div>    
-     <a href="http://edgardoa.github.io/EventApp/create" class="small radius button" id="create">Create</a>
+     <a href="http://edgardoa.github.io/EventApp/user" class="small radius button" id="create">Log In</a>
    </div>
  </div>
 </div>
