--- a/user.html
+++ b/user.html
@@ -81,7 +81,7 @@
    <div class="small-block-grid-5">
      <li><a href="create.html" class="small round button">Create</a></li>
      <li><a href="view.html" class="medium success button">View</a></li>
-     <li><a href="#" class="medium alert button">Logout</a></li>
+     <li><a href="index.html" class="medium alert button">Logout</a></li>
    </div>
  </div>
 
