--- a/view.html
+++ b/view.html
@@ -88,7 +88,7 @@
 		<div class="row">
 			<div class="large-12 columns">
 				<label><b>Event Date</b></label>
-				<p>12/15/14</p>
+				<p>December 15th 2014</p>
 			</div>
 		</div>
 		
