--- a/create.html
+++ b/create.html
@@ -80,37 +80,37 @@
   <!-- Data Entry -->	
   <div class="row">
     <div class="large-12 large-centered columns">
-     <label>Event Name</label>
+     <label><b>Event Name</b></label>
      <input type="text" placeholder="Enter Event Name Here..." />
    </div>
  </div>
 
  <div class="row">
    <div class="large-12 large-centered columns">
-    <label>Event Date</label>
+    <label><b>Event Date</b></label>
     <input type="date">
 
     <div class="large-8 columns time">
-      <label>Event Start Time
-        <input type="time" /></label>
+      <label><b>Event Start Time
+        <input type="time" /></b></label>
       </div>
       <div class="large-8 columns time">
-        <label>Event End Time
-          <input type="time" /></label>
+        <label><b>Event End Time
+          <input type="time" /></b></label>
         </div>
       </div>				
     </div>
 	
 	<div class="row">
       <div class="large-12 large-centered columns">
-        <label>Event Description</label>
+        <label><b>Event Description</b></label>
 		<input type="text" ; placeholder="Enter Event Description Here..." />
      </div>
 	</div>
 	
     <div class="row">
       <div class="large-12 large-centered columns">
-        <label>Event Location</label>
+        <label><b>Event Location</b></label>
 		<input id ="pac-input" type="text" ; placeholder="Enter Event Description Here..." />
       </div>
 	</div>
@@ -197,7 +197,7 @@
 
 	<div class="row">
 		<div class="large-12 large-centered columns">
-			<label>Type of Event</label>
+			<label><b>Type of Event</b></label>
 			<input type="radio" name="privacy" value="Private (Event will be visble only to people you invite)" id="Private"><label for="Private">Private</label>
 			<input type="radio" name="privacy" value="Public (Event will be visble to all members of EventUs)" id="Public"><label for="Public">Public</label>
 		</div>
@@ -208,7 +208,7 @@
 	<!-- Donation Radio Button -->	
 	<div class="row">
 		<div class="large-12 large-centered columns">
-		  <label>Accept Donations</label>
+		  <label><b>Accept Donations</b></label>
 		  <input type="radio" name="donation" value="Yes" id="donationYes"><label for="donationYes">Yes</label>
 		  <input type="radio" name="donation" value="No" id="donationYes"><label for="donationNo">No</label>
 		</div>
@@ -217,7 +217,7 @@
 	<!-- Guest List -->
 	<div class="row">
 		<div class="large-12 large-centered columns">
-			<label>Guest list </label>
+			<label><b>Guest list</b></label>
 			<input id="checkbox1" type="checkbox"><label for="checkbox1">Hide the Guest list</label>
 		</div>
 	</div>
