index update + button clean up

--- a/index.html
+++ b/index.html
@@ -9,94 +9,111 @@
   <script src="js/vendor/modernizr.js"></script>
 </head>
 
-<div class="header">
-  <a href="http://edgardoa.github.io/EventApp/"> 
-    <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-NewLogo.png">
-  </a>
-  <div class="nav-menu">
-    <ul class="nav-buttons">
-      <li class="home-button"><a href=#>Home</a></li>
-      <li class="create-button"><a href="http://edgardoa.github.io/EventApp/create">Create</a></li>
-      <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
-        <div id="LoginModal" class="reveal-modal" data-reveal>
-          <form>
-            <div class="row">
-              <h2>Create An Account</h2>
-              <div class="large-4 columns">
-               <input type="text" placeholder="First Name" />
-              </div>
-              <div class="large-4 columns">
-               <input type="text" placeholder="Last Name" />
-              </div>
-              <div class="large-4 columns">
-               <input type="text" placeholder="Email" />
-              </div>
-            </div>
-            <div class="row">
-              <div class="large-4 columns">
-                <input type="text" placeholder="Desired Username" />
-              </div>
-              <div class="large-4 columns">
-                <input type="text" placeholder="Password" />
-              </div>
-              <div class="large-4 columns">    
-                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Submit</a>
-              </div>
-            </div>
-            </br>
-            <div class="row">
-              <h2>Log In</h2>
-              <div class="large-4 columns">
-                <input type="text" placeholder="Username" />
-              </div>
-              <div class="large-4 columns">
-                <input type="text" placeholder="Password" />
-              </div>
-              <div class="large-4 columns">    
-                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Log In</a>
-              </div>
-            </div>
-          </form>
-          <a class="close-reveal-modal">&#215;</a>
-      </div>
-      </li>
-    </ul>
-  </div>
-</div>
+	<div class="header">
+	  <a href="http://edgardoa.github.io/EventApp/"> 
+		<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-NewLogo.png">
+	  </a>
+	  <div class="nav-menu">
+		<ul class="nav-buttons">
+		  <li class="home-button"><a href=#>Home</a></li>
+		  <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
+			<div id="LoginModal" class="reveal-modal" data-reveal>
+			  <form>
+				<div class="row">
+				  <h2>Create An Account</h2>
+				  <div class="large-4 columns">
+				   <input type="text" placeholder="First Name" />
+				  </div>
+				  <div class="large-4 columns">
+				   <input type="text" placeholder="Last Name" />
+				  </div>
+				  <div class="large-4 columns">
+				   <input type="text" placeholder="Email" />
+				  </div>
+				</div>
+				<div class="row">
+				  <div class="large-4 columns">
+					<input type="text" placeholder="Desired Username" />
+				  </div>
+				  <div class="large-4 columns">
+					<input type="text" placeholder="Password" />
+				  </div>
+				  <div class="large-4 columns">    
+					<a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Submit</a>
+				  </div>
+				</div>
+				</br>
+				<div class="row">
+				  <h2>Log In</h2>
+				  <div class="large-4 columns">
+					<input type="text" placeholder="Username" />
+				  </div>
+				  <div class="large-4 columns">
+					<input type="text" placeholder="Password" />
+				  </div>
+				  <div class="large-4 columns">    
+					<a href="http://edgardoa.github.io/EventApp/user" class="small radius button" id="logIn">Log In</a>
+				  </div>
+				</div>
+			  </form>
+			  <a class="close-reveal-modal">&#215;</a>
+		  </div>
+		  </li>
+		</ul>
+	  </div>
+	</div>
 
-<div class="row">
-  <div class="large-12 columns">
-   <div class="panel">
-     <h2>Get Ready To Host The Best Event EVER</h2>
-     <p>Your one stop site made to make you the greatest event host around.</p><br/>
-     <div class="row">
-      <div class="large-4 medium-3 columns">
-        <h4 class="info-header">Create An Event</h4>
-        <p>Set the time, date, and location of your event. You even have the option to display a Google map to your event so your guests have no excuse not to come!</p>
-      </div>
-      <div class="large-4 medium-3 columns">
-       <h4 class="info-header">Invite Your Friends</h4>
-       <p>You are in charge. Invite everyone you know, or a select few people. Don't want to invite someone but worried about hurting their feelings? No problem! Keep invites secret and they'll never know!</p>
-     </div>
-     <div class="large-4 medium-3 columns">
-       <h4 class="info-header">Set Ticket Prices</h4>
-       <p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
-     </div>    
-     <a href="http://edgardoa.github.io/EventApp/user" class="small radius button" id="create">Log In</a>
-   </div>
- </div>
-</div>
-</div>  
+<body>
+
+	<div class="row">
+		<div class="large-12 columns">
+			<div class="panel">
+				<h1>Welcome to EventUs</h1>
+				<p>Your one stop site made to make you the greatest event host around.</p><br/>
+	
+				<div class="row">
+					<div class="small-12 small-centered columns">
+						<h4 class="info-header">Create An Event</h4>
+						<img src="img/event.png" height="50" width="50">
+						<p>Set the time, date, and location of your event. Use Google Maps to display your exact location so your guests don't get lost!</p>
+					</div>
+				</div>
+   
+				<div class="row">  
+					<div class="small-12 small-centered columns">
+						<h4 class="info-header">Invite Your Friends</h4>
+						<img src="img/friends.png" height="50" width="50">
+						<p>You are in charge. Invite everyone you know, or a select few people. Don't want to invite someone but worried about hurting their feelings? No problem! Keep invites secret and they'll never know!</p>
+					 </div>
+				</div>
+   
+				<div class="row"> 
+					<div class="small-12 small-centered columns">
+						<h4 class="info-header">Set Ticket Prices</h4>
+						<img src="img/tickets.png" height="50" width="50">
+						<p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
+					</div> 
+				</div>
+   
+				<div class="panel callout radius">
+					<p>Please Log in at the top menu bar to start creating and managing your events</p>
+				</div>   
+     
+			</div>
+		</div>
+	</div>  
 
 
-<div class="footer">
- <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About Us</a>
-</div>      
+	<div class="footer">
+	 <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About Us</a>
+	</div>      
 
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
-<script>
-$(document).foundation();
-</script>
+	<script src="js/vendor/jquery.js"></script>
+	<script src="js/foundation.min.js"></script>
+	<script>
+	$(document).foundation();
+	</script>
+	
 </body>
+
 </html>
