--- a/user.html
+++ b/user.html
@@ -8,96 +8,64 @@
   <link rel="stylesheet" href="css/main.css" />
   <script src="js/vendor/modernizr.js"></script>
 </head>
+<body>
+	<div class="header">
+		<a href="http://edgardoa.github.io/EventApp/"> 
+		<img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-NewLogo.png">
+		</a>
+		<div class="nav-menu">
+		<ul class="nav-buttons">
+			<li class="logIn-button"><a href="http://edgardoa.github.io/EventApp/index">Log Out</a></li>
+			</ul>
+		</div>
+	</div>
 
-<div class="header">
-  <a href="http://edgardoa.github.io/EventApp/"> 
-    <img src="https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/EventUs-NewLogo.png">
-  </a>
-  <div class="nav-menu">
-    <ul class="nav-buttons">
-      <li class="home-button"><a href="http://edgardoa.github.io/EventApp/index">Home</a></li>
-      <li class="logIn-button" data-reveal-id="LoginModal"><a href=#>Log In</a>
-        <div id="LoginModal" class="reveal-modal" data-reveal>
-          <form>
-            <div class="row">
-              <h2>Create An Account</h2>
-              <div class="large-4 columns">
-               <input type="text" placeholder="First Name" />
-              </div>
-              <div class="large-4 columns">
-               <input type="text" placeholder="Last Name" />
-              </div>
-              <div class="large-4 columns">
-               <input type="text" placeholder="Email" />
-              </div>
-            </div>
-            <div class="row">
-              <div class="large-4 columns">
-                <input type="text" placeholder="Desired Username" />
-              </div>
-              <div class="large-4 columns">
-                <input type="text" placeholder="Password" />
-              </div>
-              <div class="large-4 columns">    
-                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Submit</a>
-              </div>
-            </div>
-            </br>
-            <div class="row">
-              <h2>Log In</h2>
-              <div class="large-4 columns">
-                <input type="text" placeholder="Username" />
-              </div>
-              <div class="large-4 columns">
-                <input type="text" placeholder="Password" />
-              </div>
-              <div class="large-4 columns">    
-                <a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Log In</a>
-              </div>
-            </div>
-          </form>
-          <a class="close-reveal-modal">&#215;</a>
-      </div>
-      </li>
-    </ul>
-  </div>
-</div>
+	<div class="row">
+		<div class="large-12 columns">
+			<div class="panel">
+				<h1>Welcome User!</h1>
+			</div>
+		</div>
+	</div>
 
-<div class="row">
-  <div class="large-12 columns">
-   <div class="panel">
-     <h2>User Menu</h2>
-     <p>Create & View Events</p>
-   </div>
- </div>
-</div>
+	<div class="row">
+		<div class="large-12 columns">
+			<div class="panel">
+				<h2>Create an Event</h2>
+				<p>One line description</p>
+				<a href="create.html" class="medium success button">Create</a>
+			</div>
+		</div>
+	</div>  
+	
+	<div class="row">
+		<div class="large-12 columns">
+			<div class="panel">
+				<h2>View Events</h2>
+				<p>One line description</p>
+				<a href="view.html" class="medium alternate button">View</a>
+			</div>
+		</div>
+	</div>  
+	
+	<div class="row">
+		<div class="large-12 columns">
+			<div class="panel">
+				<a href="index.html" class="medium alert button">Logout</a>
+			</div>
+		</div>
+	</div>  
 
+	<script src="js/vendor/jquery.js"></script>
+	<script src="js/foundation.min.js"></script>
+	<script src="js/foundation/foundation.js"></script>
+	<script>
+	$(document).foundation();
+	</script>
 
-
-<!-- Buttons -->	  
-<div class="row">
- <div class = "medium 6 columns">
-   <div class="small-block-grid-5">
-     <li><a href="create.html" class="small round button">Create</a></li>
-     <li><a href="view.html" class="medium success button">View</a></li>
-     <li><a href="index.html" class="medium alert button">Logout</a></li>
-   </div>
- </div>
-
-
-</div>
-
-
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
-<script src="js/foundation/foundation.js"></script>
-<script>
-$(document).foundation();
-</script>
-
-<div class="footer">
- <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
-</div>    
+	<div class="footer">
+	 <class="about-button"><a href="http://edgardoa.github.io/EventApp/about">About</a>
+	</div>    
 
 </body>
 
