--- a/payment.html
+++ b/payment.html
@@ -18,7 +18,7 @@
   		</a>
   		<div class="nav-menu">
   			<ul class="nav-buttons">
-  				<li class="logIn-button"><a href="http://edgardoa.github.io/EventApp/create">Cancel</a></li>
+  				<li class="logIn-button"><a href="http://edgardoa.github.io/EventApp/view">Cancel</a></li>
   		</ul>
   	</div>
   </div>
