--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
 					<div class="small-12 small-centered columns">
 						<h4 class="info-header">Invite Your Friends</h4>
 						<img src="img/friends.png" height="50" width="50">
-						<p>You are in charge. Invite everyone you know, or a select few people. Don't want to invite someone but worried about hurting their feelings? No problem! Keep invites secret and they'll never know!</p>
+						<p>Invite anyone to your event. Family, Friends, Coworkers! Set your event for private to keep invitations hidden from other users.</p>
 					 </div>
 				</div>
    
 				<div class="row"> 
 					<div class="small-12 small-centered columns">
-						<h4 class="info-header">Set Ticket Prices</h4>
+						<h4 class="info-header">Set Event Prices</h4>
 						<img src="img/tickets.png" height="50" width="50">
-						<p>Looking to raise money for a good cause? Maybe you need some help buying supplies for the event? Get your guests to help you out by setting a ticket price or by asking for donations on the event invitation.</p>
+						<p>Allow your invitees to donate money for the event or as a donation to a cause.</p>
 					</div> 
 				</div>
    
