final clean up for today

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<input type="text" placeholder="Password" />
 				  </div>
 				  <div class="large-4 columns">    
-					<a href="http://edgardoa.github.io/EventApp/index" class="small radius button" id="logIn">Submit</a>
+					<a href="http://edgardoa.github.io/EventApp/user" class="small radius button" id="logIn">Submit</a>
 				  </div>
 				</div>
 				</br>
