--- a/user.html
+++ b/user.html
@@ -32,7 +32,7 @@
 		<div class="large-12 columns">
 			<div class="panel">
 				<h2>Create an Event</h2>
-				<p>One line description</p>
+				<p>Create your event and send out invitations</p>
 				<a href="create.html" class="medium success button">Create</a>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 		<div class="large-12 columns">
 			<div class="panel">
 				<h2>View Events</h2>
-				<p>One line description</p>
+				<p>View any event invitations</p>
 				<a href="view.html" class="medium alternate button">View</a>
 			</div>
 		</div>
