--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<input type="text" placeholder="Desired Username" />
 				  </div>
 				  <div class="large-4 columns">
-					<input type="text" placeholder="Password" />
+					<input type="password" placeholder="Password" />
 				  </div>
 				  <div class="large-4 columns">    
 					<a href="http://edgardoa.github.io/EventApp/user" class="small radius button" id="logIn">Submit</a>
@@ -48,7 +48,7 @@
 					<input type="text" placeholder="Username" />
 				  </div>
 				  <div class="large-4 columns">
-					<input type="text" placeholder="Password" />
+					<input type="password" placeholder="Password" />
 				  </div>
 				  <div class="large-4 columns">    
 					<a href="http://edgardoa.github.io/EventApp/user" class="small radius button" id="logIn">Log In</a>
