--- a/view.html
+++ b/view.html
@@ -50,6 +50,14 @@
 		
 		<div class="row">
 			<div class="large-12 columns">
+				<label><b>Event Time</b></label>
+				<p>7-11pm</p>
+			</div>
+		</div>
+		
+		
+		<div class="row">
+			<div class="large-12 columns">
 				<label><b>Event Location</b></label>
 				<p>1864 Holleman Dr. </p>		
 			</div>
