--- a/user.html
+++ b/user.html
@@ -33,7 +33,7 @@
 			<div class="panel">
 				<h2>Create an Event</h2>
 				<p>Create your event and send out invitations</p>
-				<a href="create.html" class="medium success button">Create</a>
+				<a href="create.html" class="medium radius success button">Create</a>
 			</div>
 		</div>
 	</div>  
@@ -43,7 +43,7 @@
 			<div class="panel">
 				<h2>View Events</h2>
 				<p>View any event invitations</p>
-				<a href="view.html" class="medium alternate button">View</a>
+				<a href="view.html" class="medium radius alternate button">View</a>
 			</div>
 		</div>
 	</div>  
@@ -51,7 +51,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 			<div class="panel">
-				<a href="index.html" class="medium alert button">Logout</a>
+				<a href="index.html" class="medium radius alert button">Logout</a>
 			</div>
 		</div>
 	</div>  
